--- a/src/app/terminales/terminal/terminal.component.css
+++ b/src/app/terminales/terminal/terminal.component.css
@@ -7,7 +7,9 @@
 
 .terminal-container{
     display: flex;
+    flex-direction: column;
     gap: 3vw;
+    align-items: center;
     justify-content: center;
     padding: 4vw;
     width: 1200px;
@@ -16,6 +18,10 @@
     border-radius: 1px;
     background-color: #ffffff;
     border: rgb(217, 217, 217) 0.2px solid;
+}
+.main-container{
+  display: flex;
+  gap: 50px;
 }
 
 h1{
@@ -90,7 +96,7 @@ h1{
   .buttons button{
     border: 0;
     margin: 0;
-    width: 180px;
+    width: 200px;
     height: 50px;
   }
   .edit{
@@ -166,3 +172,14 @@ h1{
     color: #fff;
   }
   
+  .view-button{
+    padding: 0.5rem 1rem;
+    background-color: #3262a3;
+    color: #fff;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+    width: 180px;
+    height: 50px;
+  }
