--- a/src/app/terminales/agregarterminal/agregarterminal.component.html
+++ b/src/app/terminales/agregarterminal/agregarterminal.component.html
@@ -3,7 +3,7 @@
   <div class="form-container">
     <div class="form-fields">
       <div class="input-group">
-        <input type="text" placeholder="Nombre" [(ngModel)]="terminalData.nombre">
+        <input type="text" placeholder="Nombre" [(ngModel)]="terminalData.nombre" >
         <input type="text" placeholder="Num Exterior" [(ngModel)]="terminalData.num">
       </div>
       <div class="input-group">
@@ -15,7 +15,9 @@
         <input type="text" placeholder="Teléfono" [(ngModel)]="terminalData.telefono">
       </div>
       <div class="input-group">
-        <select [(ngModel)]="terminalData.colonia"  aria-placeholder="Colonias">
+        <select [(ngModel)]="terminalData.colonia"  aria-placeholder="">
+          <option value="" disabled selected>Seleccionar Status del Chofer</option>
+
           <option *ngFor="let colonia of colonias" [value]="colonia">{{ colonia }}</option>
         </select>
         <input type="text" placeholder="Horario de apertura" [(ngModel)]="terminalData.horarioApertura">
