--- a/src/app/users/administradores/agg-administradores/agg-administradores.component.css
+++ b/src/app/users/administradores/agg-administradores/agg-administradores.component.css
@@ -67,7 +67,7 @@
     gap: 10px;
   }
   
-  .input-group input {
+  .input-group input, select {
     flex: 1;
     padding: 10px;
     border: 1px solid #ccc;
