--- a/src/app/login/iniciar-sesion/iniciar-sesion.component.css
+++ b/src/app/login/iniciar-sesion/iniciar-sesion.component.css
@@ -1,3 +1,4 @@
+
 .login-background {
   display: flex;
   justify-content: center;
@@ -13,7 +14,7 @@
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   overflow: hidden;
-  background: white;
+background: linear-gradient(to bottom, rgba(57, 110, 183, 1), rgba(25, 48, 81, 1));
 }
 
 .form-section,
@@ -42,6 +43,7 @@
 .text-section h3 {
   margin-bottom: 1rem;
   font-family:"Jost", sans-serif;
+  color: white;
 }
 
 label {
@@ -57,7 +59,7 @@ input {
   width: 100%;
   padding: 0.8rem;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
+  border: none;
   border-radius: 15px;
   font-size: 18px;
   font-family:"Jost", sans-serif;
@@ -93,10 +95,13 @@ button.Cambiarform{
   transition: background-color 0.3s;
   margin: 10px;
   font-family:"Jost", sans-serif;
+  
 }
 
 button:hover {
   background-color: #357ABD;
+  box-shadow: 0 0px 500px rgba(255, 255, 255, 0.1);
+
 }
 
 button:focus {
@@ -113,6 +118,7 @@ button.secondary {
 button.secondary:hover {
   background-color: #4A90E2;
   color: white;
+  box-shadow: 0 0px 500px rgba(255, 255, 255, 0.1);
 }
 
 .mensaje {
