--- a/src/app/users/administradores/agg-administradores/agg-administradores.component.html
+++ b/src/app/users/administradores/agg-administradores/agg-administradores.component.html
@@ -53,7 +53,8 @@
                 <option value="" disabled selected>Seleccionar Status del Chofer</option>
                 <option value="activo">Activo</option>
                 <option value="inactivo">Inactivo</option>
-              </select>              
+              </select>
+              <input type="number" placeholder="terminal_id" [(ngModel)]="administradorData.terminal_id" required>              
             </div>
           </div>
         </div>
