--- a/src/app/terminales/agregarterminal/agregarterminal.component.html
+++ b/src/app/terminales/agregarterminal/agregarterminal.component.html
@@ -3,35 +3,32 @@
   <div class="form-container">
     <div class="form-fields">
       <div class="input-group">
-        <input type="text" placeholder="Nombre" [(ngModel)]="terminalData.nombre" >
+        <input type="text" placeholder="Nombre de la Terminal" [(ngModel)]="terminalData.nombre" >
         <input type="text" placeholder="Num Exterior" [(ngModel)]="terminalData.num">
       </div>
       <div class="input-group">
         <input type="text" placeholder="Codigo Postal" [(ngModel)]="terminalData.cp" (blur)="obtenerColoniasPorCP()">
-        <input type="text" placeholder="Estado" [(ngModel)]="terminalData.estado">
+        <input type="text" placeholder="Calle" [(ngModel)]="terminalData.calle">
+
       </div>
       <div class="input-group">
-        <input type="text" placeholder="Calle" [(ngModel)]="terminalData.calle">
-        <input type="text" placeholder="Teléfono" [(ngModel)]="terminalData.telefono">
+        <input type="text" placeholder="Estado" [(ngModel)]="terminalData.estado" disabled>
+        <input type="text" placeholder="Municipio" [(ngModel)]="terminalData.municipio" disabled>
       </div>
+
       <div class="input-group">
         <select [(ngModel)]="terminalData.colonia"  aria-placeholder="">
-          <option value="" disabled selected>Seleccionar Status del Chofer</option>
-
+          <option value="" disabled selected>Seleccionar Colonia</option>
           <option *ngFor="let colonia of colonias" [value]="colonia">{{ colonia }}</option>
         </select>
-        <input type="text" placeholder="Horario de apertura" [(ngModel)]="terminalData.horarioApertura">
+        <input type="text" placeholder="Teléfono" [(ngModel)]="terminalData.telefono">
+
       </div>
       <div class="input-group">
-        <input type="text" placeholder="Municipio" [(ngModel)]="terminalData.municipio">
-        <input type="text" placeholder="Horario de cierre" [(ngModel)]="terminalData.horarioCierre">
-      </div>
+        <input type="text" placeholder="Horario de apertura" [(ngModel)]="terminalData.horarioApertura" (blur)="validarHorario('apertura')">
+        <input type="text" placeholder="Horario de cierre" [(ngModel)]="terminalData.horarioCierre" (blur)="validarHorario('cierre')">      </div>
       <button class="add-button" (click)="agregarTerminal()">Agregar</button>
     </div>
-    <div class="map-container">
-      <h3>Ubicación en el mapa</h3>
-      <p>Calle San Juan, 5 de Mayo, Suchiapa, Chiapas</p>
-      <img src="https://via.placeholder.com/300x200" alt="Mapa de ubicación">
-    </div>
+
   </div>
 </div>
