--- a/src/app/terminales/terminal/terminal.component.css
+++ b/src/app/terminales/terminal/terminal.component.css
@@ -1,168 +1,195 @@
-.terminales{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: "Jost", sans-serif;
+.terminales {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Jost", sans-serif;
+
 }
 
-.terminal-container{
-    display: flex;
-    gap: 3vw;
-    justify-content: center;
-    padding: 4vw;
-    width: 1200px;
-    height:auto;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 1px;
-    background-color: #ffffff;
-    border: rgb(217, 217, 217) 0.2px solid;
+.terminal-container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 3vw;
+  padding: 4vw;
+  width: 90%; 
+  max-width: 1200px;
+  background-color: #ffffff;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  border: rgb(217, 217, 217) 0.2px solid;
 }
 
-h1{
-    margin-left: 180px;
-    font-family: "Jost", sans-serif;
-  }
+h1 {
+  font-family: "Jost", sans-serif;
+  text-align: center;
+  margin-bottom: 2rem;
+  font-size: 2rem;
+}
 
-  .form-fields {
-    flex: 1;
-    height: 400px;
-    width: 580px;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .input-group {
-    display: flex;
-    gap: 1rem;
-    margin-bottom: 3.17rem;
-  }
-  
-  .input-group input {
-    flex: 1;
-    width: 260px;
-    height: 25px;
-    padding: 0.8rem;
-    border: 1px solid #ccc;
-    border-radius: 15px;
-    box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.219);
-    font-family:"Jost", sans-serif;
-    font-size: 18px;
-  }
+.form-fields {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  justify-content: flex-start;
+  align-items: center;
+  width: 100%;
+  max-width: 600px;
+}
 
-  .map-container {
-    flex: 1;
-    font-family:"Jost", sans-serif;
-    text-align: center;
-    background-color: #ffffff;
-    padding: 20px;
-    width: 500px;
-    height:420px;
-    box-shadow:  0px 2px 4px rgba(0, 0, 0, 0.275);
-  }
+.input-group {
+  display: flex;
+  gap: 1rem;
+  width: 100%;
+  justify-content: space-between;
+}
 
-  
-  .map-container h3 {
-    font-size: 20px;
-    margin-bottom: 0.5rem;
-    border: none;
-    margin: none;
-    padding: 0;
-  }
-  
-  .map-container p {
-    font-size: 17px;
-    color: #666;
-    margin-bottom: 1rem;
-  }
-  
-  .map-container img {
-    width: 100%;
-    height:310px;
-    border-radius: 8px;
-    box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
-  }
+.input-group input, select {
+  flex: 1;
+  padding: 0.8rem;
+  border: 1px solid #ccc;
+  border-radius: 15px;
+  font-family: "Jost", sans-serif;
+  font-size: 18px;
+  box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.1);
+  margin-bottom: 5px;
+}
 
-  .buttons{
-    display: flex;
-    gap: 40px;
-  }
+.map-container {
+  width: 500px;
+  height: 420px;
+  background-color: #ffffff;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.275);
+  padding: 1rem;
+  border-radius: 8px;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 
-  .buttons button{
-    border: 0;
-    margin: 0;
-    width: 180px;
-    height: 50px;
-  }
-  .edit{
-    background-color: #3262A3;
-    font-size: 20px;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  .delete{
-    background-color: #a33232;
-    font-size: 20px;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  .carlist{
-    background-color: #3262A3;
-    font-size: 20px;
-    color: white;
-    border-radius: 10px;
-    cursor: pointer;
-  }
-  
-  .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1000;
-  }
-  
-  .modal-content {
-    align-items: center;
-    text-align: center;
-    background-color: #ffffff;
-    padding: 2rem;
-    width: 600px;
-    border-radius: 8px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-    font-family: "Jost", sans-serif;
-  }
-  
-  .modal-buttons {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-  }
-  
-  .modal-buttons button {
-    padding: 0.5rem 1rem;
-    font-size: 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    width: 180px;
-    height: 50px;
-    border-radius: 10px;
-  }
-  
-  .modal-buttons button:first-child {
-    background-color: #3262a3;
-    color: #fff;
-  }
-  
-  .modal-buttons button:last-child {
-    background-color: #a33232;
-    color: #fff;
-  }
-  
+.map-container h3 {
+  font-size: 20px;
+  margin-bottom: 1rem;
+}
+
+.map-container p {
+  font-size: 17px;
+  color: #666;
+  margin-bottom: 1rem;
+}
+
+.map-container img {
+  width: 100%;
+  height: 310px;
+  border-radius: 8px;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+}
+
+.buttons {
+  display: flex;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 2rem;
+
+}
+
+.buttons button {
+  width: 180px;
+  height: 50px;
+  font-size: 20px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: none;
+  color: white;
+  font-family: "Jost", sans-serif;
+}
+
+.edit {
+  background-color: #3262A3;
+  transition: background-color 0.3s ease;
+
+}
+
+.edit:hover{
+  background-color: #023c8d;
+}
+
+.delete {
+  background-color: #a33232;
+  transition: background-color 0.3s ease;
+
+}
+
+.carlist {
+  background-color: #3262A3;
+  transition: background-color 0.3s ease;
+
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  align-items: center;
+  text-align: center;
+  background-color: #ffffff;
+  padding: 2rem;
+  border-radius: 8px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  font-family: "Jost", sans-serif;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.modal-buttons button {
+  padding: 0.5rem 1rem;
+  font-size: 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  width: 180px;
+  height: 50px;
+  border-radius: 10px;
+  margin-top: 5px;
+}
+
+.uno{
+  background-color: #3262A3;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+.dos{
+  background-color: #a33232;
+  color: white;
+  transition: background-color 0.3s ease;
+}
+.uno:hover{
+  background-color: #023c8d;
+}
+.dos:hover{
+  background-color: #df0e0e;
+}
+.input-group label {
+  display: flex;
+  font-size: 18px;
+  color: #333;
+  width: 120px;
+  text-align: center;
+}
+
