--- a/src/app/users/choferes/agg-chofer/agg-chofer.component.html
+++ b/src/app/users/choferes/agg-chofer/agg-chofer.component.html
@@ -1,17 +1,16 @@
 <div class="register-container">
   <h1>Registro de Chofer</h1>
   <div class="form-container">
-    <div class="photo-container">
-      <img [src]="imagePreview || 'https://via.placeholder.com/150'" alt="Foto de usuario" class="user-photo">
-      <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
-      <button class="upload-button" (click)="fileInput.click()">Subir Foto</button>
-    </div>
     
-
     <div class="form-fields">
+      <div class="photo-container">
+        <img [src]="imagePreview || 'https://via.placeholder.com/150'" alt="Foto de usuario" class="user-photo">
+        <input type="file" #fileInput (change)="onFileSelected($event)" hidden>
+        <button class="upload-button" (click)="fileInput.click()">Subir Foto</button>
+      </div>
       <div class="section">
         <h2>Datos personales</h2>
-        <div class="section-content">
+        <div class="section-content1">
           <div class="input-group">
             <input type="text" placeholder="Nombre" [(ngModel)]="choferData.nombre" required>
             <input type="text" placeholder="Apellido" [(ngModel)]="choferData.lastname" required>
