--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar *ngIf="showNavbar"></app-navbar>
 
-<router-outlet></router-outlet>
-
-<app-footer *ngIf="showNavbar"></app-footer>
+<div class="app-container">
+    <router-outlet></router-outlet>
+    <app-footer *ngIf="showNavbar"></app-footer>
+</div>
