--- a/src/app/terminales/terminal/terminal.component.css
+++ b/src/app/terminales/terminal/terminal.component.css
@@ -3,7 +3,14 @@
   flex-direction: column;
   align-items: center;
   font-family: "Jost", sans-serif;
-
+  justify-content: center;
+}
+.body1{
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .terminal-container {
@@ -11,9 +18,8 @@
   justify-content: center;
   align-items: flex-start;
   gap: 3vw;
-  padding: 4vw;
-  width: 90%; 
-  max-width: 1200px;
+  padding: 4vw; 
+  width: 1200px;
   background-color: #ffffff;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -22,9 +28,10 @@
 
 h1 {
   font-family: "Jost", sans-serif;
-  text-align: center;
+  text-align: left;
   margin-bottom: 2rem;
   font-size: 2rem;
+  width: 1336px;
 }
 
 .form-fields {
@@ -33,8 +40,7 @@ h1 {
   gap: 1.5rem;
   justify-content: flex-start;
   align-items: center;
-  width: 100%;
-  max-width: 600px;
+  width: 90%;
 }
 
 .input-group {
@@ -53,6 +59,7 @@ h1 {
   font-size: 18px;
   box-shadow: inset 0px 2px 4px rgba(0, 0, 0, 0.1);
   margin-bottom: 5px;
+  width: 30%;
 }
 
 .map-container {
@@ -186,10 +193,10 @@ h1 {
   background-color: #df0e0e;
 }
 .input-group label {
-  display: flex;
   font-size: 18px;
   color: #333;
-  width: 120px;
-  text-align: center;
+  width: 90px;
+  text-align: left;
+
 }
 
