--- a/src/app/terminales/terminales-list/terminales-list.component.css
+++ b/src/app/terminales/terminales-list/terminales-list.component.css
@@ -3,6 +3,12 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  height: 100%;
+}
+
+main{
+  width: 100%;
+  height: 100vh;
 }
 
 .container {
