--- a/src/app/users/choferes/agg-chofer/agg-chofer.component.css
+++ b/src/app/users/choferes/agg-chofer/agg-chofer.component.css
@@ -15,7 +15,7 @@ h1 {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  width: 600px;
+  width: 800px;
   height: auto;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
@@ -59,7 +59,8 @@ h1 {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  width: 60%;
+  width: 100%;
+  padding: 10px;
 }
 
 .input-group {
@@ -100,6 +101,12 @@ h2:hover {
 }
 
 .section-content {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  padding: 10px 0;
+}
+.section-content1{
   display: flex;
   flex-direction: column;
   gap: 10px;
