--- a/src/styles.css
+++ b/src/styles.css
@@ -5,4 +5,7 @@ body{
     border: 0;
     background-color: #F3F8FF;
     font-family: "Jost", sans-serif;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
