--- a/src/app/login/iniciar-sesion/iniciar-sesion.component.html
+++ b/src/app/login/iniciar-sesion/iniciar-sesion.component.html
@@ -3,12 +3,15 @@
     <div class="form-section">
       <h2>{{ isRegistering ? 'Registro' : 'Inicio de Sesión' }}</h2>
       <form [formGroup]="isRegistering ? registerForm : loginForm" (ngSubmit)="isRegistering ? registrar() : login()">
-        <input id="nombre" formControlName="nombre" type="text" placeholder="Nombre de Usuario" />
+        <div *ngIf="isRegistering">
+          <input id="nombre" formControlName="nombre" type="text" placeholder="Nombre de Usuario" />
+        </div>
         <input id="email" formControlName="email" type="email" placeholder="Correo Electrónico" />
         <input id="password" formControlName="password" type="password" placeholder="Contraseña" />
         <button type="submit" class="Sesion-Registro">{{ isRegistering ? 'Registrar' : 'Iniciar Sesión' }}</button>
         <p *ngIf="mensaje" class="mensaje">{{ mensaje }}</p>
       </form>
+      
     </div>
     <div class="text-section">
       <h2>{{ isRegistering ? '¿Ya tienes una cuenta?' : '¿No tienes una cuenta?' }}</h2>
@@ -17,5 +20,5 @@
         {{ isRegistering ? 'Inicia sesión' : 'Regístrate' }}
       </button>
     </div>
-  </div>
+    
 </div>
