--- a/src/app/users/administradores/agg-administradores/agg-administradores.component.css
+++ b/src/app/users/administradores/agg-administradores/agg-administradores.component.css
@@ -12,7 +12,7 @@
   
   .form-container {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     padding: 20px;
     width: 600px;
