--- a/src/app/users/administradores/list-administradores/list-administradores.component.html
+++ b/src/app/users/administradores/list-administradores/list-administradores.component.html
@@ -26,40 +26,39 @@
         <h1>Detalles del Chofer</h1>
         <form class="form-fields">
           <div class="input-group">
-            <input type="text" [value]="administradorSeleccionado.nombre" placeholder="Nombre" />
-            <input type="text" [value]="administradorSeleccionado.lastname" placeholder="Apellido" />
+            <input type="text" [value]="administradorSeleccionado.nombre" placeholder="Nombre" disabled/>
+            <input type="text" [value]="administradorSeleccionado.lastname" placeholder="Apellido" disabled />
           </div>
     
           <div class="input-group">
-            <input type="email" [value]="administradorSeleccionado.email" placeholder="Email" />
-            <input type="text" [value]="administradorSeleccionado.username" placeholder="Nombre de Usuario" />
+            <input type="email" [value]="administradorSeleccionado.email" placeholder="Email" disabled/>
+            <input type="text" [value]="administradorSeleccionado.username" placeholder="Nombre de Usuario" disabled/>
           </div>
     
           <div class="input-group">
-            <input type="text" [value]="administradorSeleccionado.telefono" placeholder="Teléfono" />
+            <input type="text" [value]="administradorSeleccionado.telefono" placeholder="Teléfono" disabled/>
           </div>
     
           <div class="input-group">
-            <input type="number" [value]="administradorSeleccionado.edad" placeholder="Edad" />
-            <input type="text" [value]="administradorSeleccionado.experienciaLaboral" placeholder="Experiencia Laboral">
-            <input type="text" [value]="administradorSeleccionado.status" placeholder="Status">
+            <input type="number" [value]="administradorSeleccionado.edad" placeholder="Edad" disabled/>
+            <input type="text" [value]="administradorSeleccionado.experienciaLaboral" placeholder="Experiencia Laboral"disabled>
+            <input type="text" [value]="administradorSeleccionado.status" placeholder="Status"disabled>
           </div>
     
           <div *ngIf="administradorSeleccionado.direccion">
             <h3>Dirección</h3>
             <div class="input-group">
-              <input type="text" [value]="administradorSeleccionado.direccion.calle" placeholder="Calle" />
-              <input type="text" [value]="administradorSeleccionado.direccion.ciudad" placeholder="Ciudad" />
+              <input type="text" [value]="administradorSeleccionado.direccion.calle" placeholder="Calle" disabled/>
+              <input type="text" [value]="administradorSeleccionado.direccion.ciudad" placeholder="Ciudad" disabled/>
             </div>
             <div class="input-group">
-              <input type="text" [value]="administradorSeleccionado.direccion.estado" placeholder="Estado" />
-              <input type="text" [value]="administradorSeleccionado.direccion.codigoPostal" placeholder="Código Postal" />
+              <input type="text" [value]="administradorSeleccionado.direccion.estado" placeholder="Estado" disabled/>
+              <input type="text" [value]="administradorSeleccionado.direccion.codigoPostal" placeholder="Código Postal" disabled />
             </div>
           </div>
         </form>
     
         <div class="modal-buttons">
-          <button class="edit">Guardar</button>
           <button class="delete" (click)="cerrarModal()">Cancelar</button>
         </div>
       </div>
